# Ticketing_Genie-Ticket_Service

./: .dockerignore  .gitignore  Dockerfile  celery_worker.sh  celerybeat-schedule.dir  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
src/: main.py
src/api/middleware/: cors.py  error_handler.py  trustedhost.py
src/api/rest/: app.py  dependencies.py
src/config/: settings.py
src/constants/: __init__.py
src/control/agents/: auto_assign_agent.py  clasifier_agent.py  draft_agent.py  email_classifier_agent.py  email_extraction_agent.py  enhance_agent.py  routing_agent.py
src/core/celery/: app.py  loop.py  utils.py
src/core/exceptions/: base.py
src/core/reddis/: assignment_lock.py
src/core/services/: admin_service.py  agent_conversation_service.py  agent_services.py  audit_service.py  conversation_service.py  customer_conversation_service.py  email_service.py  embed_service.py  gcs_service.py  notification_service.py  similar_ticket_service.py  team_lead_service.py  team_service.py  ticket_group_service.py  ticket_service.py
src/core/sse/: redis_subscriber.py  sse_manager.py
src/data/clients/: mongo_client.py  postgres_client.py
src/data/repositories/: admin_repository.py  base_repository.py  conversation_repository.py  (+7 more)
src/schemas/: admin_schema.py  conversation_schema.py  notification_preference_schema.py  team_lead_schema.py  ticket_schema.py
src/scripts/: keyword_seeder.py  notification_templates.py  priority_seviority_seeder.py  seed_reopen_warning_template.py  sla_rule_seeder.py  team_and_member_seeder.py
src/utils/: jwt.py
(+22 files in other folders)
