[project]
name = "ticket-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "aiosmtplib==3.0.2",
    "asyncpg==0.29.0",
    "celery[redis]==5.4.0",
    "fastapi==0.115.0",
    "greenlet==3.1.1",
    "groq==0.11.0",
    "httpx==0.27.2",
    "jinja2==3.1.4",
    "langchain-core==0.3.10",
    "langchain-groq==0.2.0",
    "langgraph==0.2.28",
    "motor==3.6.0",
    "mypy==1.11.2",
    "pgvector>=0.4.2",
    "pydantic[email]==2.9.2",
    "pydantic-settings==2.5.2",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.12",
    "redis==5.1.0",
    "ruff==0.6.9",
    "slowapi==0.1.9",
    "sqlalchemy==2.0.36",
    "structlog==24.4.0",
    "tenacity==8.5.0",
    "uuid6>=2025.0.1",
    "uvicorn[standard]==0.30.6",
    "websockets==13.1",
    "torch>=2.10.0",
    "sentence-transformers>=5.2.3",
    "jose>=1.0.0",
    "jwt>=1.4.0",
    "google-auth>=2.49.1",
    "google-cloud-storage>=3.10.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
